tests/ui/snapshots/naming_conventions.json.snap
---
source: crates/ply-driver/tests/ui.rs
---
[
  {
    "code": "E0101",
    "severity": "error",
    "phase": "resolve",
    "title": "`http_request` is not UpperCamel; types in Ply are written UpperCamel",
    "primary_span": {
      "file": "naming_conventions.ply",
      "start": [
        1,
        8
      ],
      "end": [
        1,
        20
      ]
    },
    "fixes": [
      {
        "title": "rename to `HttpRequest`",
        "edits": [
          {
            "span": {
              "file": "naming_conventions.ply",
              "start": [
                1,
                8
              ],
              "end": [
                1,
                20
              ]
            },
            "replace": "HttpRequest"
          }
        ]
      }
    ],
    "worklist_ref": null
  },
  {
    "code": "E0101",
    "severity": "error",
    "phase": "resolve",
    "title": "`retryCount` is not snake_case; values in Ply are written snake_case",
    "primary_span": {
      "file": "naming_conventions.ply",
      "start": [
        2,
        5
      ],
      "end": [
        2,
        15
      ]
    },
    "fixes": [
      {
        "title": "rename to `retry_count`",
        "edits": [
          {
            "span": {
              "file": "naming_conventions.ply",
              "start": [
                2,
                5
              ],
              "end": [
                2,
                15
              ]
            },
            "replace": "retry_count"
          }
        ]
      }
    ],
    "worklist_ref": null
  },
  {
    "code": "E0101",
    "severity": "error",
    "phase": "resolve",
    "title": "`totalFees` is not snake_case; values in Ply are written snake_case",
    "primary_span": {
      "file": "naming_conventions.ply",
      "start": [
        5,
        4
      ],
      "end": [
        5,
        13
      ]
    },
    "fixes": [
      {
        "title": "rename to `total_fees`",
        "edits": [
          {
            "span": {
              "file": "naming_conventions.ply",
              "start": [
                5,
                4
              ],
              "end": [
                5,
                13
              ]
            },
            "replace": "total_fees"
          }
        ]
      }
    ],
    "worklist_ref": null
  },
  {
    "code": "E0101",
    "severity": "error",
    "phase": "resolve",
    "title": "`maxSize` is not snake_case; values in Ply are written snake_case",
    "primary_span": {
      "file": "naming_conventions.ply",
      "start": [
        5,
        14
      ],
      "end": [
        5,
        21
      ]
    },
    "fixes": [
      {
        "title": "rename to `max_size`",
        "edits": [
          {
            "span": {
              "file": "naming_conventions.ply",
              "start": [
                5,
                14
              ],
              "end": [
                5,
                21
              ]
            },
            "replace": "max_size"
          }
        ]
      }
    ],
    "worklist_ref": null
  },
  {
    "code": "E0101",
    "severity": "error",
    "phase": "resolve",
    "title": "`maxSize` is not snake_case; values in Ply are written snake_case",
    "primary_span": {
      "file": "naming_conventions.ply",
      "start": [
        6,
        5
      ],
      "end": [
        6,
        12
      ]
    },
    "fixes": [
      {
        "title": "rename to `max_size`",
        "edits": [
          {
            "span": {
              "file": "naming_conventions.ply",
              "start": [
                6,
                5
              ],
              "end": [
                6,
                12
              ]
            },
            "replace": "max_size"
          }
        ]
      }
    ],
    "worklist_ref": null
  }
]
