tests/ui/snapshots/naming_conventions.txt.snap
---
source: crates/ply-driver/tests/ui.rs
---
error[E0101]: `http_request` is not UpperCamel; types in Ply are written UpperCamel
 --> naming_conventions.ply:1:8
  |
 1| struct http_request {
  |        ^^^^^^^^^^^^
help: rename to `HttpRequest`
 1| struct HttpRequest {

error[E0101]: `retryCount` is not snake_case; values in Ply are written snake_case
 --> naming_conventions.ply:2:5
  |
 2|     retryCount: Int,
  |     ^^^^^^^^^^
help: rename to `retry_count`
 2|     retry_count: Int,

error[E0101]: `totalFees` is not snake_case; values in Ply are written snake_case
 --> naming_conventions.ply:5:4
  |
 5| fn totalFees(maxSize: Int) -> Int {
  |    ^^^^^^^^^
help: rename to `total_fees`
 5| fn total_fees(maxSize: Int) -> Int {

error[E0101]: `maxSize` is not snake_case; values in Ply are written snake_case
 --> naming_conventions.ply:5:14
  |
 5| fn totalFees(maxSize: Int) -> Int {
  |              ^^^^^^^
help: rename to `max_size`
 5| fn totalFees(max_size: Int) -> Int {

error[E0101]: `maxSize` is not snake_case; values in Ply are written snake_case
 --> naming_conventions.ply:6:5
  |
 6|     maxSize
  |     ^^^^^^^
help: rename to `max_size`
 6|     max_size

5 errors
