tests/ui/snapshots/or_instead_of_pipes.json.snap
---
source: crates/ply-driver/tests/ui.rs
---
[
  {
    "code": "E0110",
    "severity": "error",
    "phase": "parse",
    "title": "`||` is not an operator in Ply; the boolean operators are `and`, `or`, `not`",
    "primary_span": {
      "file": "or_instead_of_pipes.ply",
      "start": [
        2,
        7
      ],
      "end": [
        2,
        9
      ]
    },
    "fixes": [
      {
        "title": "use `or`",
        "edits": [
          {
            "span": {
              "file": "or_instead_of_pipes.ply",
              "start": [
                2,
                7
              ],
              "end": [
                2,
                9
              ]
            },
            "replace": "or"
          }
        ]
      }
    ],
    "worklist_ref": null
  }
]
