tests/ui/snapshots/or_instead_of_pipes.txt.snap
---
source: crates/ply-driver/tests/ui.rs
---
error[E0110]: `||` is not an operator in Ply; the boolean operators are `and`, `or`, `not`
 --> or_instead_of_pipes.ply:2:7
  |
 2|     a || b
  |       ^^
help: use `or`
 2|     a or b

1 error
