tests/ui/snapshots/query_missing_select.json.snap
---
source: crates/ply-driver/tests/ui.rs
---
[
  {
    "code": "E0120",
    "severity": "error",
    "phase": "parse",
    "title": "a query needs a `select` clause naming the result",
    "primary_span": {
      "file": "query_missing_select.ply",
      "start": [
        2,
        48
      ],
      "end": [
        2,
        49
      ]
    },
    "fixes": [],
    "worklist_ref": null
  }
]
