tests/ui/snapshots/query_missing_select.txt.snap
---
source: crates/ply-driver/tests/ui.rs
---
error[E0120]: a query needs a `select` clause naming the result
 --> query_missing_select.ply:2:48
  |
 2|     query { from i in xs where i.days_late > 0 }
  |                                                ^

1 error
