tests/ui/snapshots/unclosed_brace.txt.snap
---
source: crates/ply-driver/tests/ui.rs
---
error[E0111]: unclosed `{` — expected `}`, found end of file
 --> unclosed_brace.ply:3:1
  |
 3| 
  | ^
 --> unclosed_brace.ply:1:25
  |
 1| fn total(a: Int) -> Int {
  |                         - `{` opened here
help: close the `{` here
 3| }

1 error
